<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erlaljiyadav.mobitask.activites.VarificationOTP">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toggle_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_light"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/otp_msg"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:cursorVisible="false"
            />


        <TextView

            android:id="@+id/txt_otp_confirm"
            android:layout_gravity="center"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_boarder"
            android:text="@string/confirm"
            android:gravity="center"
            android:textSize="17sp"
            android:elevation="5dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:id="@+id/txt_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp"
            >
            <ImageView
                android:id="@+id/img_timer"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:padding="10dp"
                android:background="@drawable/time"
                />
            <TextView

                android:id="@+id/txt_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
