<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/colorPrimary"
    tools:context="com.example.erlaljiyadav.mobitask.activites.LoginSignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/movi_task_blue_logo"
                />
        </LinearLayout>
        <!--This is for Signup-->
        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
                <EditText
                    android:id="@+id/signup_input_user_name"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dip"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:drawableLeft="@drawable/user"
                    android:hint="@string/hint_user_name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                >
                <EditText
                    android:id="@+id/signup_input_email"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:drawablePadding="5dip"
                    android:drawableLeft="@drawable/email_blue"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"

                >

                <EditText
                    android:id="@+id/signup_input_mobile"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:drawablePadding="4dip"
                    android:drawableLeft="@drawable/smartphone"
                    android:inputType="phone"
                    android:hint="@string/hint_mobile"
                    android:drawableStart="@drawable/smartphone_blue" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/signup_input_password"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/closed_lock_blue"
                    android:maxLength="30"
                    android:drawablePadding="3dip"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
               >

                <EditText
                    android:id="@+id/signup_input_confirm_password"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/closed_lock_blue"
                    android:maxLength="30"
                    android:drawablePadding="3dip"
                    android:hint="@string/hint_confirm_pwd" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--This is for Login-->
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                >

                <EditText
                    android:id="@+id/login_mobile"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:drawablePadding="4dip"
                    android:drawableLeft="@drawable/smartphone"
                    android:inputType="phone"
                    android:hint="@string/hint_mobile"
                    android:drawableStart="@drawable/smartphone_blue" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray500"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/login_password"
                    android:textColor="@color/blue_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/closed_lock_blue"
                    android:maxLength="30"
                    android:drawablePadding="3dip"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp" />
            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_marginLeft="2dp"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:weightSum="2"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/blue_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_500"
                android:text="or"
                android:padding="6dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/blue_500"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/google_logo"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_logo"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/twitter_circular_button"
                />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
